# aa-matrices

./: CMakeLists.txt  README.md
data/: results.csv
include/: algorithms.h  matrix.h
scripts/: generate_graph.py  long_experiment.bash  mem_usage.py  run.bash  run.fish
src/: algorithms.c  main.c  matrix.c  test.c
